+webaudio & timing/buffering

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 		<meta name="viewport" content="width=device-width">
 		<script src="node_modules/jsfxr/jsfxr.js"></script>
 		<script src="index.js"></script>
-		<script src="sample.js"></script>
+		<script src="sample.js" defer></script>
 	</head>
 	<body>
-
+		<button>Stop!</button>
 	</body>
 </html>
